# Venus

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  skills-lock.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/skills/grill-me/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: content-sources.md  user-guide.md  ux-language.md
public/moments/: fallback.json
specs/001-beautiful-rest-space/: data-model.md  design-direction.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-beautiful-rest-space/checklists/: requirements.md
specs/001-beautiful-rest-space/contracts/: local-ipc-events.md
specs/002-next-iteration-discovery/: design-direction.md  spec.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  content_cache.rs  fullscreen.rs  lib.rs  main.rs  preferences.rs  tray.rs  window.rs
src/app/: App.tsx
src/app/styles/: rest-space.css  tokens.css
src/shared/events/: domain-events.ts
src/shared/performance/: marks.ts
src/shared/time/: clock.ts
src/test/: setup.ts
src/test/e2e/: mvp-full-cycle.spec.ts  us1-prompt-performance.spec.ts  us1-rest-prompt.spec.ts  us2-rest-space-performance.spec.ts  (+3 more)
(+45 files in other folders)
