[package]
name = "venus"
version = "0.1.0"
description = "Venus desktop rest space"
authors = ["Venus"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "venus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }